--- a/app/views/users/_user_bio.html.erb
+++ b/app/views/users/_user_bio.html.erb
@@ -1,3 +1,3 @@
 <p>Bio: <%= @user.bio %></p>
-<p>Home Mountain: <%= @home_mountain %> </p>
+<p>Home Mountain: <%= link_to @home_mountain.name, @home_mountain %> </p>
 <p>Home Town: <%= @user.home_town %></p>
